PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.4.0alpha1

Core:
  . Added zend_call_stack_get implementation for NetBSD. (David Carlier)

DOM:
  . Added DOMNode::compareDocumentPosition(). (nielsdos)

Standard:
  . Implement GH-12188 (Indication for the int size in phpinfo()). (timwolla)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>